[project]
name = "ricksteves"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h2>=4.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "parsel>=1.10.0",
    "plotly>=6.2.0",
    "streamlit>=1.46.1",
]
